cust_name and date attaches. product name and quantity fails.

--- a/cs_340_nodes/hw/angular_customer/main.html
+++ b/cs_340_nodes/hw/angular_customer/main.html
@@ -7,11 +7,12 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.28/angular-route.min.js"></script> 
 	<script type="text/javascript" src="/app.js"></script> 
 	<script type="text/javascript" src="/js/controllers/controller.js"></script> 
-	<script type="text/javascript" src="/js/services/factory.js"></script> 
+	<script type="text/javascript" src="/js/services/orderFactory.js"></script> 
+	<script type="text/javascript" src="/js/services/customerFactory.js"></script> 
 </head>
 <body>
 <div ng-app='myApp'>
-	<a href="#/">Customer</a> | <a href="#/products">Products</a> 
+	<a href="#/">Customers</a> | <a href="#/orders">Orders</a> 
 
 	<div ng-view="">
 	</div>
