orders partial: seoption selected properly displayed

--- a/cs_340_nodes/hw/angular_customer/main.html
+++ b/cs_340_nodes/hw/angular_customer/main.html
@@ -14,6 +14,7 @@
 <div ng-app='myApp'>
 	<a href="#/">Customers</a> | <a href="#/orders">Orders</a> 
 
+	<!-- Placeholder for Views -->
 	<div ng-view="">
 	</div>
 </div>
